pkg/gateway/xds/translator/testdata/out/xds-ir/http-route-partial-invalid.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        - name: test
          stringMatch:
            suffix: end
        prefix: /
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: valid-route
      route:
        cluster: valid-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/valid-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        - name: test
          stringMatch:
            suffix: end
        prefix: /
        queryParameters:
        - name: debug
          stringMatch:
            exact: "yes"
      name: invalid-route
      route:
        cluster: invalid-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.compressor/default/brotli:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/gzip:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.compressor/default/zstd:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
        envoy.filters.http.dynamic_forward_proxy/invalid-route:
          '@type': type.googleapis.com/envoy.config.route.v3.FilterConfig
          config: {}
